--- a/package.json
+++ b/package.json
@@ -5,15 +5,26 @@
   "main": "index.js",
   "dependencies": {
     "await-to-js": "^2.1.1",
+    "chrono-node": "^1.3.11",
     "discord.js": "^11.5.1",
-    "puppeteer": "^1.18.0"
+    "luxon": "^1.16.0",
+    "puppeteer": "^1.18.0",
+    "sugar": "^2.0.6",
+    "sugar-date": "^2.0.6"
   },
   "devDependencies": {
-    "local-repl": "^4.0.0"
+    "local-repl": "^4.0.0",
+    "@types/luxon": "^1.15.1",
+    "@types/node": "^12.0.10",
+    "@types/puppeteer": "^1.12.4",
+    "typescript": "^3.5.2",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "repl": "local-repl"
+    "repl": "local-repl",
+    "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "repl": {
     "enableAwait": true
