--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "main": "index.js",
   "dependencies": {
     "await-to-js": "^2.1.1",
+    "bluebird": "^3.5.5",
     "discord.js": "^11.5.1",
+    "local-repl": "^4.0.0",
     "luxon": "^1.16.0",
     "puppeteer": "^1.18.0",
     "sugar": "^2.0.6",
     "sugar-date": "^2.0.6",
-    "local-repl": "^4.0.0",
     "ts-node": "^8.3.0"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.27",
     "@types/luxon": "^1.15.1",
     "@types/node": "^12.0.10",
     "@types/puppeteer": "^1.12.4",
-    "typescript": "^3.5.2",
-    "tslint": "^5.18.0"
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
