--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/ws": "^7.2.6",
     "await-to-js": "^2.1.1",
     "bluebird": "^3.7.2",
     "discord.js": "^12.2.0",
